# tcc

./: .gitignore  LICENSE  README.md
bioloid_example/: CMakeLists.txt  package.xml
bioloid_example/config/: bioloid_without_legs.rviz  controller_tests.yaml  dxl_robot_description.yaml  effort_controllers.yaml  joint_ids.yaml  load_controllers.yaml  position_controllers.yaml
bioloid_example/launch/: bioloid_without_legs_display.launch  bioloid_without_legs_effort_controllers.launch  bioloid_without_legs_gazebo.launch  bioloid_without_legs_joint_state_controller.launch
bioloid_example/mesh/: Notes.txt  base_link.STL  head_link.STL  neck_link.STL
bioloid_example/scripts/: control_left_arm.py  control_right_arm.py  joint_trajectory_publisher.py  single_joint_position_trajectory_publisher.py
bioloid_example/src/: bioloid_example_main.cpp
bioloid_example/urdf/: Notes.txt  bioloid_torso_std_part.xacro  bioloid_without_legs.gv  bioloid_without_legs.urdf  bioloid_without_legs.xacro  bioloid_without_legs_gazebo.xacro
control_loop/: CMakeLists.txt  package.xml
control_loop/include/: control_loop.h  icontroller.h  ihardware.h  robot_hw_adapter.h  ros_control_loop.h  ros_controller_manager_adapter.h
control_loop/src/: control_loop.cpp  robot_hw_adapter.cpp  ros_control_loop.cpp  ros_controller_manager_adapter.cpp
control_timer/: package.xml
control_timer/include/: ControlTimer.h  IController.h  IHardwareInterface.h  RosControllerManagerAdapter.h
control_timer/src/: ControlTimer.cpp  RosControllerManagerAdapter.cpp
control_timer_tests/: CMakeLists.txt  README.md  dummy_ros_controller_plugin.xml  package.xml
control_timer_tests/include/: DummyController.h  DummyControllerBase.h  DummyHardwareInterface.h  DummyRosController.h
control_timer_tests/src/: DummyController.cpp  DummyControllerBase.cpp  DummyHardwareInterface.cpp  DummyRosController.cpp  dummy_controller_test.cpp  dummy_ros_controller_test.cpp
dxl_interface/: CMakeLists.txt  README.md
dxl_interface/include/: dxl_channel.h  dxl_command.h  dxl_constants_protocol_1.h  dxl_constants_protocol_2mx.h  dxl_control_table.h  dxl_handle.h  dxl_handle_group.h  dxl_id.h  dxl_interface.h  dxl_model.h  dxl_model_spec.h  dxl_spec.h
dxl_interface/model_specs/: AX-12.dxl  AX.dxl  EX-106+.dxl  MX(2.0).dxl  MX-106.dxl  MX-64.dxl  MX.dxl
dxl_interface/src/: dxl_channel.cpp  dxl_command.cpp  dxl_control_table.cpp  dxl_handle.cpp  dxl_handle_group.cpp  dxl_model_spec.cpp
dxl_interface/tests/: dxl_interface_test.cpp
dxl_robot_hw/: CMakeLists.txt  dxl_robot_hw.yaml  dxl_robot_hw_test_config.launch  package.xml
dxl_robot_hw/config/: dxl_robot_hw.yaml  single_joint_controller.yaml
dxl_robot_hw/include/: DxlRobotHW.h
dxl_robot_hw/launch/: dxl_robot_hw_test_config.launch  single_joint.launch
dxl_robot_hw/scripts/: ILC_test.py  joint_trajectory_publisher.py
dxl_robot_hw/src/: DxlRobotHW.cpp  dxl_robot_hw_test.cpp
dxl_robot_hw/urdf/: single_joint.urdf
dxl_tests/: CMakeLists.txt  README.md  freq_estimator.cpp  ilc_test.cpp  plotILC.m  rt_test.cpp  scan.cpp
gzInterface/: CMakeLists.txt  DxlInstructionPacketParser.cpp  DxlInstructionPacketParser.h  DxlMemMap.cpp  DxlMemMap.h  DxlMemMapConstants.h  DxlModelParamConverter.cpp  DxlModelParamConverter.h  GzDxlPlugin.cpp  GzDxlPlugin.h  GzSimplePlugin.cpp  GzSimplePlugin.h  funcmovgz.cpp  gz_interface_msgs.proto  main.cpp  simple_arm.world
gzInterface/gz_msgs/: DxlInstructionPacket.proto  DxlStatusPacket.proto  GzReadAnswer.proto  GzReadRequest.proto  GzReadResponse.proto  GzWriteRequest.proto
gzInterface/include/: AbsJointControllerManager.h  AbsMotionController.h  AbsReadWriteSynchronizer.h  AsyncLogger.h  DummyMotionController.h  DummyReadWriteSynchronizer.h  DxlInstructionPacketParser.h  DxlModelParamConverter.h  GzJointController.h  GzMotionController.h  GzSimplePlugin.h  Joint.h  JointCommand.h  JointController.h  MapVec.h  MotionController.h  Page.h  PageSet.h  Pid.h  Pose.h
gzInterface/include/GzDxl/: DxlMemMapConstants.h
gzInterface/json/: MX-106.dxlmap
gzInterface/src/: AbsMotionController.cpp  AbsReadWriteSynchronizer.cpp  CMakeLists.txt  GzJointController.cpp  GzMotionController.cpp  GzSimplePlugin.cpp  MotionController.cpp  Page.cpp  PageSet.cpp  Pose.cpp  main.cpp
gzInterface/world/: simple_arm.world
ilc_feedforward_controller/: CMakeLists.txt  ilc_feedforward_controller.xml  ilc_feedforward_controller_plugin.xml  package.xml
ilc_feedforward_controller/include/: single_joint_ilc_controller.h
ilc_feedforward_controller/src/: single_joint_ilc_controller.cpp
ilc_feedforward_controller/tests/: single_joint_ilc_controller_test.cpp
posvel_controllers/: CMakeLists.txt  dxl_robot_hw.yaml  dxl_robot_hw_test_config.launch  example.urdf  package.xml  posvel_controllers_plugin.xml  posvel_group_controller.yaml
posvel_controllers/include/: forward_joint_trajectory_point_controller.h  joint_group_posvel_controller.h  posvel_joint_interface_adapter.h  posvel_joint_trajectory_controller.h
posvel_controllers/src/: joint_group_posvel_controller.cpp  posvel_joint_trajectory_controller.cpp
src/: .gitignore  CMakeLists.txt
src/core/: CMakeLists.txt
src/core/joint_command/: JointCommand.h  PidWriteJointCommand.h  PosVelWriteJointCommand.h  ReadJointCommand.h  TorqueWriteJointCommand.h  WriteJointCommand.h
src/core/joint_controller/: AbsJointController.h  IPosVelJointController.h  IReadJointController.h  ITorqueJointController.h  IWriteJointController.h  Joint.h  JointController.h  JointState.h  PidValues.h
src/core/joint_motion/: CMakeLists.txt  Page.h  PageSet.h  Pose.h
src/core/motion_controller/: CMakeLists.txt  ControllerTimeHandler.h  DummyMotionController.h  IController.h  IHardwareInterface.h  MotionController.h  (+2 more)
src/gz_interface/: CMakeLists.txt  GzJointController.h  GzMotionController.h  GzSimplePlugin.h
src/utils/: CMakeLists.txt  MapVec.h
utils/: CMakeLists.txt  package.xml  plotter.m
utils/include/: AsyncLogger.h  IJsonObject.h  MultiThreadHelper.h
utils/src/: AsyncLogger.cpp  MultiThreadHelper.cpp
(+21 files in other folders)
