<package format="2">
    <name>bioloid_example</name>
    <version>0.0.0</version>
    <description>
        Example with a bioloid robot without legs 
    </description>
    <maintainer email="mateus.amarujo@gmail.com">Mateus Amarante</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>dxl_robot_hw</depend>
    <depend>controller_manager</depend>
    <depend>control_timer</depend>
</package>
