<package format="2">
  <name>control_timer</name>
  <version>0.0.0</version>
  <description>
    This package implements a controller wrapper that handles synchronization.
  </description>
  <maintainer email="mateus.amarujo@gmail.com">Mateus Amarante</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
</package>
