<package format="2">
  <name>dxl_robot_hw</name>
  <version>0.0.0</version>
  <description>
    This package implements a simple RobotHW for dynamixel motors.
  </description>
  <maintainer email="mateus.amarujo@gmail.com">Mateus Amarante</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
</package>
