<package format="2">
    <name>ilc_feedforward_controller</name>
    <version>0.0.0</version>
    <description>
        ILC Test.
    </description>
    <maintainer email="mateus.amarujo@gmail.com">Mateus Amarante</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>std_msgs</depend>
    <depend>joint_state_controller</depend>
    <depend>realtime_tools</depend>
    <depend>roscpp</depend>
    <depend>dxl_robot_hw</depend>
    <depend>control_timer</depend>

    <export>
        <controller_interface plugin="${prefix}/ilc_feedforward_controller_plugin.xml"/>
    </export>

</package>
