<package format="2">
    <name>ilc_feedforward_controller</name>
    <version>0.0.0</version>
    <description>
        Package intended to reproduce the experiments described on https://www.ais.uni-bonn.de/papers/RC13_Schwarz.pdf.
        Basically, it provides:
        - A controller to find the 'U' curve to estimate the servo model parameters by ILC method (partially implemented);
        - The resulting feedforward controller for a single joint system (not implemented yet);
    </description>
    <maintainer email="mateus.amarujo@gmail.com">Mateus Amarante</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>std_msgs</depend>
    <depend>joint_state_controller</depend>
    <depend>realtime_tools</depend>
    <depend>roscpp</depend>
    <depend>dxl_robot_hw</depend>
    <depend>control_loop</depend>

    <export>
        <controller_interface plugin="${prefix}/ilc_feedforward_controller_plugin.xml"/>
    </export>

</package>
