<package format="2">
    <name>posvel_controllers</name>
    <version>0.0.0</version>
    <description>
        Position-Velocity Controllers.
    </description>
    <maintainer email="mateus.amarujo@gmail.com">Mateus Amarante</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>trajectory_msgs</depend>
    <depend>joint_trajectory_controller</depend>
    <depend>roscpp</depend>
    <depend>realtime_tools</depend>

    <export>
        <controller_interface plugin="${prefix}/posvel_controllers_plugin.xml"/>
    </export>

</package>
